modified file ajout style

--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<h1> titre </h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+<h1>Titre 1</h1>
+<h2>Titre 2</h2>
+
+</body>
+</html>
